--- a/FutbolBrasil/web/app/views/main.scala.html
+++ b/FutbolBrasil/web/app/views/main.scala.html
@@ -54,6 +54,24 @@
                                         </li>
                                     }
                                 }
+
+                                <li class="dropdown">
+                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.lac")<b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li class="dropdown-header">@Messages("main.languages")</li>
+                                        <li><a href="@controllers.routes.LanguagesView.list()">@Messages("main.list")</a></li>
+                                        <li><a href="@controllers.routes.LanguagesView.blank">@Messages("main.create")</a></li>
+                                        <li class="dropdown-header">@Messages("main.countries")</li>
+                                        <li><a href="@controllers.routes.CountriesView.list()">@Messages("main.list")</a></li>
+                                        <li><a href="@controllers.routes.CountriesView.blank">@Messages("main.create")</a></li>
+                                        <li class="dropdown-header">@Messages("main.timezones")</li>
+                                        <li><a href="@controllers.routes.TimezonesView.list()">@Messages("main.list")</a></li>
+                                        <li><a href="@controllers.routes.TimezonesView.blank">@Messages("main.create")</a></li>
+                                        <li class="dropdown-header">@Messages("main.devices")</li>
+                                        <li><a href="@controllers.routes.DevicesView.list()">@Messages("main.list")</a></li>
+                                        <li><a href="@controllers.routes.DevicesView.blank">@Messages("main.create")</a></li>
+                                    </ul>
+                                </li>
                                 
                             }{<p/>}
                         </ul>
